advanced search list works todo => fix visibility on checkButton

--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,10 @@ body {
     user-select: none;
     cursor: pointer;
 }
+
+.thisInputIsInvisible {
+    visibility: hidden;
+}
+.thisInputIsVisible {
+    visibility: visible;
+}
